// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`player.service should clear the board 1`] = `
Array [
  Array [
    "{\\"type\\":\\"ClearBoard\\",\\"payload\\":[]}",
  ],
  Array [
    "{\\"type\\":\\"NewBoardState\\"}",
  ],
  Array [
    "{\\"type\\":\\"UpdatePlayerList\\",\\"payload\\":[{\\"status\\":\\"ActionNotTaken\\"}]}",
  ],
]
`;

exports[`player.service should disconnect a player 1`] = `
Array [
  Array [
    "{\\"type\\":\\"PlayerDisconnected\\",\\"payload\\":[{\\"status\\":\\"ActionNotTaken\\"}]}",
  ],
]
`;

exports[`player.service should join a new player 1`] = `
Array [
  Array [
    "{\\"type\\":\\"PlayerSuccessfullyJoined\\",\\"payload\\":\\"some-short-v4-uuid-0\\"}",
  ],
  Array [
    "{\\"type\\":\\"UpdatePlayerList\\",\\"payload\\":[{\\"id\\":\\"some-short-v4-uuid-0\\",\\"name\\":\\"foo\\",\\"color\\":{\\"background\\":{\\"r\\":256,\\"g\\":256,\\"b\\":256},\\"text\\":{\\"r\\":128,\\"g\\":128,\\"b\\":128}},\\"status\\":\\"ActionNotTaken\\"}]}",
  ],
]
`;

exports[`player.service should move a chess figure 1`] = `
Array [
  Array [
    "{\\"type\\":\\"FigureMoved\\"}",
  ],
  Array [
    "{\\"type\\":\\"UpdatePlayerList\\",\\"payload\\":[{\\"status\\":\\"FigurePlaced\\"}]}",
  ],
  Array [
    "{\\"type\\":\\"NewBoardState\\",\\"payload\\":[]}",
  ],
]
`;

exports[`player.service should set a turn if user\`s move already exist 1`] = `
Array [
  Array [
    "{\\"type\\":\\"SetMyTurn\\",\\"payload\\":{\\"row\\":2,\\"tile\\":5,\\"figure\\":\\"rook\\",\\"player\\":\\"player1\\",\\"id\\":\\"some-short-v4-uuid-0\\",\\"score\\":8}}",
  ],
]
`;

exports[`player.service should skip a move for a player 1`] = `
Array [
  Array [
    "{\\"type\\":\\"MoveSkipped\\",\\"payload\\":[{\\"id\\":\\"some-short-v4-uuid-0\\",\\"name\\":\\"foo\\",\\"color\\":{\\"background\\":{\\"r\\":256,\\"g\\":256,\\"b\\":256},\\"text\\":{\\"r\\":128,\\"g\\":128,\\"b\\":128}},\\"status\\":\\"MoveSkipped\\"}]}",
  ],
  Array [
    "{\\"type\\":\\"NewBoardState\\",\\"payload\\":[]}",
  ],
]
`;
